--- a/app/css/style.css
+++ b/app/css/style.css
@@ -131,7 +131,6 @@ h4{
     margin: 2px;
 }
 
-.menu-item-img{/* float:right; */margin:20px 30px;height: 100px;left: 0;right: 0;}
 .menu-item-img{
 margin:20px 30px;
 height:100px;
@@ -185,17 +184,17 @@ min-width:89% !important;
 }
 
 .course-item-img {
-    float:right;
+/*   float:right;
     margin:20px 30px;
     width: 90px;
     max-width: 250px;
-    height:90px;
+    height:90px;*/
 }
 
 .course-item-img img {
-    width: 150px;
-    max-width: 250px;
-    height:100px;
+    min-width: 254px;
+    height:160px;
+    margin-right:-12px;
 }
 
 .course-item-desc {
