--- a/app/css/style.css
+++ b/app/css/style.css
@@ -156,7 +156,7 @@ margin-top:10px;
 }
 
 .menu-title{
-background-color:#a8cae5 !important;	
+/*background-color:#a8cae5 !important;	*/
 border:#428bca 3px solid;
 min-width:89% !important;
 }
