--- a/app/css/style.css
+++ b/app/css/style.css
@@ -144,8 +144,8 @@ margin-top:10px;
     float:right;
     width:100%;
     color: white;
-    font-weight: bold;
-    font-size: 16px;
+    font-family: Arial Unicode MS;
+    font-size: 19px;
 }
 
 .menu-item-second {
