--- a/app/css/bootstrap-extension.css
+++ b/app/css/bootstrap-extension.css
@@ -1,1 +1,37 @@
 
+.btn-default:hover,
+.btn-default:focus,
+.btn-default:active,
+.btn-default.active,
+.open .dropdown-toggle.btn-default {
+  color: #0f2638;
+  border-color: #77e5b8 ;
+  box-shadow: -1px 1px 8px #fffbf8;
+  font-weight:bold;
+}
+
+.btn-default{
+ border-color: #178bff !important;
+ background-color:none !important;
+}
+
+.navbar-inverse .navbar-nav > li > a
+{
+     color: #0f2638 !important;
+}
+
+.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus
+{
+	background-color: #3d5a71 !important;
+	border-radius : 100px;
+	box-shadow: -1px 1px 8px #fffbf8;
+	color: #ffffff !important;
+}
+
+
+h4{
+	color:#435e73 !important;
+	font-weight:bold  !important;
+	font-family:Arial Unicode MS;
+	font-size:20px;
+}
