--- a/app/css/style.css
+++ b/app/css/style.css
@@ -60,7 +60,8 @@ height: 50px;
 
 .user-details{
 	color:#ff9c47;
-	font-size : 20px;
+	font-size : 22px;
+	font-family:Arial Unicode MS;
 }
 
 .menu-item-container {
