--- a/app/css/style.css
+++ b/app/css/style.css
@@ -47,6 +47,7 @@ height: 50px;
 {
     width: 550px;
     height: 400px;
+    opacity:0.6;
 }
 
 .container_wrapper {
@@ -104,6 +105,10 @@ height:130px;
 left: 0;
 right: 0;
 margin-top:10px;
+}
+
+.menu-item-img:hover{
+	
 }
 
 .menu-item-txt {
