--- a/app/css/style.css
+++ b/app/css/style.css
@@ -35,12 +35,10 @@ height: 50px;
 
 #ContainerInfo
 {
-    border: 4px solid #fff;
-    width: 570px;
     align-content: center;
     height: 500px;
     position : absolute;
-    -webkit-box-shadow: 0 0 20px #ee4e00;
+    /*-webkit-box-shadow: 0 0 20px #ee4e00;*/
 }
 
 #DinerImg
