--- a/app/css/style.css
+++ b/app/css/style.css
@@ -15,6 +15,11 @@ body {
     direction: rtl;
 }
 
+#HomeImg > img: hover{
+	width:210px;
+	height:160px;
+}
+
 .logo{
 	float:right;
 	padding:15px;
@@ -85,10 +90,6 @@ height: 50px;
     margin:10px;
 }
 
-#HomeImg img: hover{
-	width:210px;
-	height:160px;
-}
 .menu-item-container img{
     max-width: 60px;
     width: 50px;
