--- a/app/css/style.css
+++ b/app/css/style.css
@@ -207,7 +207,7 @@ min-width:89% !important;
 
 .course-details-img{
 	float:right;	
-	-webkit-box-shadow:0 0 10px rgba(0, 0, 0, .8);
+	-webkit-box-shadow:0 0 10px rgba(108, 226, 0, 0.8);
 	margin-top:5px !important;
 }
 
